mozreview: fix alignment of moved-block line numbers (bug 1299797); r=smacleod
Override upstream's 2px calculated value with 18px (our 20px padding minus the
right-hand border width of 2px).

MozReview-Commit-ID: L3BKz8we3JU

--HG--
extra : rebase_source : 13916bed7831eb730cdbee62fcbde891605f8236

--- a/pylib/mozreview/mozreview/static/mozreview/css/viewdiff.less
+++ b/pylib/mozreview/mozreview/static/mozreview/css/viewdiff.less
@@ -69,6 +69,11 @@ button.diff-file-btn {
             }
         }
     }
+    .moved-row {
+      th {
+        padding-right: 18px;
+      }
+    }
 }
 
 span.ghost-commentflag {
